@@ -6,7 +6,6 @@ import static org.mockito.Mockito.*;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.validation.ConstraintViolation;
 import javax.validation.Validation;
@@ -32,20 +31,29 @@ import de.tum.in.www1.artemis.domain.enumeration.DisplayPriority;
 import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.metis.CourseWideContext;
 import de.tum.in.www1.artemis.domain.metis.Post;
+import de.tum.in.www1.artemis.domain.plagiarism.PlagiarismCase;
 import de.tum.in.www1.artemis.repository.metis.PostRepository;
+import de.tum.in.www1.artemis.repository.plagiarism.PlagiarismCaseRepository;
 import de.tum.in.www1.artemis.service.notifications.GroupNotificationService;
 import de.tum.in.www1.artemis.web.rest.dto.PostContextFilter;
 
-public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
+class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
 
     @Autowired
     private PostRepository postRepository;
 
+    @Autowired
+    private PlagiarismCaseRepository plagiarismCaseRepository;
+
     private List<Post> existingPosts;
+
+    private List<Post> existingCoursePosts;
 
     private List<Post> existingExercisePosts;
 
     private List<Post> existingLecturePosts;
+
+    private List<Post> existingPlagiarismPosts;
 
     private List<Post> existingCourseWidePosts;
 
@@ -57,6 +65,8 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     private Long lectureId;
 
+    private Long plagiarismCaseId;
+
     private Validator validator;
 
     private User student1;
@@ -64,7 +74,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     private static final int MAX_POSTS_PER_PAGE = 20;
 
     @BeforeEach
-    public void initTestCase() {
+    void initTestCase() {
 
         // used to test hibernate validation using custom PostContextConstraintValidator
         validator = Validation.buildDefaultValidatorFactory().getValidator();
@@ -73,18 +83,23 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         student1 = database.getUserByLogin("student1");
 
-        // initialize test setup and get all existing posts (there are 4 posts with lecture context, 4 with exercise context, and 3 with course-wide context - initialized): 11
-        // posts in total
+        // initialize test setup and get all existing posts (there are 4 posts with lecture context, 4 with exercise context,
+        // 1 plagiarism case and 3 with course-wide context - initialized): 12 posts in total
         existingPosts = database.createPostsWithinCourse();
 
+        existingCoursePosts = existingPosts.stream().filter(post -> post.getPlagiarismCase() == null).toList();
+
         // filter existing posts with exercise context
-        existingExercisePosts = existingPosts.stream().filter(coursePost -> (coursePost.getExercise() != null)).collect(Collectors.toList());
+        existingExercisePosts = existingCoursePosts.stream().filter(coursePost -> (coursePost.getExercise() != null)).toList();
 
         // filter existing posts with lecture context
-        existingLecturePosts = existingPosts.stream().filter(coursePost -> (coursePost.getLecture() != null)).collect(Collectors.toList());
+        existingLecturePosts = existingCoursePosts.stream().filter(coursePost -> (coursePost.getLecture() != null)).toList();
+
+        // filter existing posts with plagiarism context
+        existingPlagiarismPosts = existingPosts.stream().filter(coursePost -> coursePost.getPlagiarismCase() != null).toList();
 
         // filter existing posts with course-wide context
-        existingCourseWidePosts = existingPosts.stream().filter(coursePost -> (coursePost.getCourseWideContext() != null)).collect(Collectors.toList());
+        existingCourseWidePosts = existingCoursePosts.stream().filter(coursePost -> (coursePost.getCourseWideContext() != null)).toList();
 
         course = existingExercisePosts.get(0).getExercise().getCourseViaExerciseGroupOrCourseMember();
 
@@ -94,6 +109,8 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         lectureId = existingLecturePosts.get(0).getLecture().getId();
 
+        plagiarismCaseId = existingPlagiarismPosts.get(0).getPlagiarismCase().getId();
+
         GroupNotificationService groupNotificationService = mock(GroupNotificationService.class);
         doNothing().when(groupNotificationService).notifyAllGroupsAboutNewPostForExercise(any(), any());
         doNothing().when(groupNotificationService).notifyAllGroupsAboutNewPostForLecture(any(), any());
@@ -102,7 +119,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         database.resetDatabase();
     }
 
@@ -110,7 +127,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreateExercisePost() throws Exception {
+    void testCreateExercisePost() throws Exception {
         Post postToSave = createPostWithoutContext();
         Exercise exercise = existingExercisePosts.get(0).getExercise();
         postToSave.setExercise(exercise);
@@ -127,7 +144,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreateExamExercisePost_badRequest() throws Exception {
+    void testCreateExamExercisePost_badRequest() throws Exception {
         Exam exam = database.setupSimpleExamWithExerciseGroupExercise(course);
         Post postToSave = createPostWithoutContext();
         Exercise examExercise = exam.getExerciseGroups().get(0).getExercises().stream().findFirst().orElseThrow();
@@ -143,7 +160,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreateLecturePost() throws Exception {
+    void testCreateLecturePost() throws Exception {
         Post postToSave = createPostWithoutContext();
         Lecture lecture = existingLecturePosts.get(0).getLecture();
         postToSave.setLecture(lecture);
@@ -160,7 +177,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreateCourseWidePost() throws Exception {
+    void testCreateCourseWidePost() throws Exception {
         Post postToSave = createPostWithoutContext();
         postToSave.setCourse(course);
         postToSave.setCourseWideContext(existingCourseWidePosts.get(0).getCourseWideContext());
@@ -179,7 +196,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateAnnouncement() throws Exception {
+    void testCreateAnnouncement() throws Exception {
         Post postToSave = createPostWithoutContext();
         postToSave.setCourse(course);
         postToSave.setCourseWideContext(CourseWideContext.ANNOUNCEMENT);
@@ -199,7 +216,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testCreateAnnouncement_asStudent_forbidden() throws Exception {
+    void testCreateAnnouncement_asStudent_forbidden() throws Exception {
         Post postToSave = createPostWithoutContext();
         postToSave.setCourse(course);
         postToSave.setCourseWideContext(CourseWideContext.ANNOUNCEMENT);
@@ -210,8 +227,26 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     }
 
     @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    void testCreatePlagiarismPost() throws Exception {
+        doNothing().when(singleUserNotificationService).notifyUserAboutNewPlagiarismCase(any(), any());
+
+        Post postToSave = createPostWithoutContext();
+        postToSave.setCourse(course);
+
+        final PlagiarismCase plagiarismCase = plagiarismCaseRepository.save(new PlagiarismCase());
+        postToSave.setPlagiarismCase(plagiarismCase);
+
+        request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.CREATED);
+
+        List<Post> updatedPlagiarismCasePosts = postRepository.findPostsByPlagiarismCaseId(plagiarismCase.getId());
+        assertThat(updatedPlagiarismCasePosts).hasSize(1);
+        verify(singleUserNotificationService, times(1)).notifyUserAboutNewPlagiarismCase(any(), any());
+    }
+
+    @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreateExistingPost_badRequest() throws Exception {
+    void testCreateExistingPost_badRequest() throws Exception {
         Post existingPostToSave = existingPosts.get(0);
 
         request.postWithResponseBody("/api/courses/" + courseId + "/posts", existingPostToSave, Post.class, HttpStatus.BAD_REQUEST);
@@ -221,7 +256,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreatePostForCourseWithDisabledPosts_badRequest() throws Exception {
+    void testCreatePostForCourseWithDisabledPosts_badRequest() throws Exception {
         Course course = database.createCourseWithPostsDisabled();
         courseId = course.getId();
         Post postToSave = createPostWithoutContext();
@@ -234,7 +269,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCreateEmptyPostWithParsingError() throws Exception {
+    void testCreateEmptyPostWithParsingError() throws Exception {
         Post postToSave = createPostWithoutContext();
         Exercise exercise = existingExercisePosts.get(0).getExercise();
         postToSave.setExercise(exercise);
@@ -257,7 +292,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testValidatePostContextConstraintViolation() throws Exception {
+    void testValidatePostContextConstraintViolation() throws Exception {
         Post invalidPost = createPostWithoutContext();
         request.postWithResponseBody("/api/courses/" + courseId + "/posts", invalidPost, Post.class, HttpStatus.BAD_REQUEST);
 
@@ -285,7 +320,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testSimilarityCheck() throws Exception {
+    void testSimilarityCheck() throws Exception {
         Post postToCheck = new Post();
         postToCheck.setTitle("Title Post");
 
@@ -297,7 +332,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testEditAnnouncement_asTutor_forbidden() throws Exception {
+    void testEditAnnouncement_asTutor_forbidden() throws Exception {
         Post postToUpdate = editExistingPost(existingCourseWidePosts.get(0));
         // simulate as if it was an announcement
         postToUpdate.setCourseWideContext(CourseWideContext.ANNOUNCEMENT);
@@ -308,7 +343,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testEditPost_asTutor() throws Exception {
+    void testEditPost_asTutor() throws Exception {
         // update post of student1 (index 0)--> OK
         Post postToUpdate = editExistingPost(existingPosts.get(0));
 
@@ -319,7 +354,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testEditPostByChangingContext1_asTutor() throws Exception {
+    void testEditPostByChangingContext1_asTutor() throws Exception {
         // update exercise post
         Post postToUpdate = existingExercisePosts.get(0);
         // change to context to lecture
@@ -333,7 +368,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testEditPostByChangingContext2_asTutor() throws Exception {
+    void testEditPostByChangingContext2_asTutor() throws Exception {
         // update lecture post
         Post postToUpdate = existingLecturePosts.get(0);
         // change to context to exercise
@@ -347,7 +382,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testEditPostByChangingContext3_asTutor() throws Exception {
+    void testEditPostByChangingContext3_asTutor() throws Exception {
         // update course-wide post
         Post postToUpdate = existingCourseWidePosts.get(0);
         // change to context to lecture
@@ -362,7 +397,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testEditPostByChangingContext4_asTutor() throws Exception {
+    void testEditPostByChangingContext4_asTutor() throws Exception {
         // update course post
         Post postToUpdate = existingCourseWidePosts.get(0);
         // change to course post with different course-wide context
@@ -375,7 +410,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testEditPost_forbidden() throws Exception {
+    void testEditPost_forbidden() throws Exception {
         // update own post (index 0)--> OK
         Post postToUpdate = editExistingPost(existingPosts.get(0));
 
@@ -392,7 +427,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testEditPostByChangingContext_asStudent() throws Exception {
+    void testEditPostByChangingContext_asStudent() throws Exception {
         // update exercise post
         Post postToNotUpdate = existingExercisePosts.get(0);
         // change to context to lecture
@@ -410,7 +445,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testEditPost_asStudent_forbidden() throws Exception {
+    void testEditPost_asStudent_forbidden() throws Exception {
         // update post from another student (index 1)--> forbidden
         Post postToNotUpdate = editExistingPost(existingPosts.get(1));
 
@@ -420,7 +455,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testEditPostWithIdIsNull_badRequest() throws Exception {
+    void testEditPostWithIdIsNull_badRequest() throws Exception {
         Post postToUpdate = existingPosts.get(0);
         postToUpdate.setId(null);
 
@@ -430,7 +465,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testPinPost_asStudent_forbidden() throws Exception {
+    void testPinPost_asStudent_forbidden() throws Exception {
         Post postToNotPin = editExistingPost(existingPosts.get(1));
         MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("displayPriority", DisplayPriority.PINNED.toString());
@@ -443,7 +478,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testPinPost_asTutor() throws Exception {
+    void testPinPost_asTutor() throws Exception {
         Post postToPin = editExistingPost(existingPosts.get(0));
         MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("displayPriority", DisplayPriority.PINNED.toString());
@@ -457,7 +492,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testArchivePost_asStudent_forbidden() throws Exception {
+    void testArchivePost_asStudent_forbidden() throws Exception {
         Post postToNotArchive = editExistingPost(existingPosts.get(1));
         MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("displayPriority", DisplayPriority.ARCHIVED.toString());
@@ -470,7 +505,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testArchivePost_asTutor() throws Exception {
+    void testArchivePost_asTutor() throws Exception {
         Post postToArchive = editExistingPost(existingPosts.get(0));
         MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("displayPriority", DisplayPriority.ARCHIVED.toString());
@@ -486,19 +521,19 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "USER")
-    public void testGetPostsForCourse() throws Exception {
+    void testGetPostsForCourse() throws Exception {
         // no request params set will fetch all course posts without any context filter
         var params = new LinkedMultiValueMap<String, String>();
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         // get amount of posts with that certain
         database.assertSensitiveInformationHidden(returnedPosts);
-        assertThat(returnedPosts).hasSameSizeAs(existingPosts);
+        assertThat(returnedPosts).hasSameSizeAs(existingCoursePosts);
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "USER")
-    public void testGetPostsForCourse_WithCourseWideContextRequestParam() throws Exception {
+    void testGetPostsForCourse_WithCourseWideContextRequestParam() throws Exception {
         var courseWideContext = CourseWideContext.RANDOM;
         // request param courseWideContext will fetch all course posts that match this context filter
         var params = new LinkedMultiValueMap<String, String>();
@@ -513,7 +548,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "USER")
-    public void testGetPostsForCourse_WithExerciseIdRequestParam() throws Exception {
+    void testGetPostsForCourse_WithExerciseIdRequestParam() throws Exception {
         // request param courseWideContext will fetch all course posts that match this context filter
         var params = new LinkedMultiValueMap<String, String>();
         params.add("exerciseId", exerciseId.toString());
@@ -526,7 +561,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "USER")
-    public void testGetPostsForCourse_WithLectureIdRequestParam() throws Exception {
+    void testGetPostsForCourse_WithLectureIdRequestParam() throws Exception {
         // request param courseWideContext will fetch all course posts that match this context filter
         var params = new LinkedMultiValueMap<String, String>();
         params.add("lectureId", lectureId.toString());
@@ -538,8 +573,45 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     }
 
     @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    void testGetPostsForCourse_WithPlagiarismCaseIdRequestParam_asInstructor() throws Exception {
+        // request param plagiarismCaseId will fetch all posts that match this context filter
+        var params = new LinkedMultiValueMap<String, String>();
+        params.add("plagiarismCaseId", plagiarismCaseId.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
+        // get amount of posts with certain plagiarism context
+        assertThat(returnedPosts).hasSameSizeAs(existingPlagiarismPosts);
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    void testGetPostsForCourse_WithPlagiarismCaseIdRequestParam_asStudent() throws Exception {
+        // request param plagiarismCaseId will fetch all posts that match this context filter
+        var params = new LinkedMultiValueMap<String, String>();
+        params.add("plagiarismCaseId", plagiarismCaseId.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
+        // get amount of posts with certain plagiarism context
+        assertThat(returnedPosts).hasSameSizeAs(existingPlagiarismPosts);
+    }
+
+    @Test
+    @WithMockUser(username = "student2", roles = "USER")
+    void testGetPostsForCourse_WithPlagiarismCaseIdRequestParam_asStudent_Forbidden() throws Exception {
+        // request param plagiarismCaseId will fetch all posts that match this context filter
+        var params = new LinkedMultiValueMap<String, String>();
+        params.add("plagiarismCaseId", plagiarismCaseId.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.FORBIDDEN, Post.class, params);
+        assertThat(returnedPosts).isNull();
+    }
+
+    @Test
     @WithMockUser(username = "tutor1", roles = "USER")
-    public void testGetPostsForCourse_WithInvalidRequestParams_badRequest() throws Exception {
+    void testGetPostsForCourse_WithInvalidRequestParams_badRequest() throws Exception {
         // request param courseWideContext will fetch all course posts that match this context filter
         var params = new LinkedMultiValueMap<String, String>();
         params.add("lectureId", lectureId.toString());
@@ -552,7 +624,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostTagsForCourse() throws Exception {
+    void testGetPostTagsForCourse() throws Exception {
         List<String> returnedTags = request.getList("/api/courses/" + courseId + "/posts/tags", HttpStatus.OK, String.class);
         // 4 different tags were used for the posts
         assertThat(returnedTags).hasSameSizeAs(postRepository.findPostTagsForCourse(courseId));
@@ -560,14 +632,14 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostTagsForCourseWithNonExistentCourseId_notFound() throws Exception {
+    void testGetPostTagsForCourseWithNonExistentCourseId_notFound() throws Exception {
         List<String> returnedTags = request.getList("/api/courses/" + 9999L + "/posts/tags", HttpStatus.NOT_FOUND, String.class);
         assertThat(returnedTags).isNull();
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostsForCourse_WithUsersOwnPosts() throws Exception {
+    void testGetPostsForCourse_WithUsersOwnPosts() throws Exception {
         // filterToOwn set; will fetch all course posts of current logged-in user
         var params = new LinkedMultiValueMap<String, String>();
         params.add("filterToOwn", "true");
@@ -575,12 +647,12 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         database.assertSensitiveInformationHidden(returnedPosts);
         // get posts of current user and compare
-        assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> student1.getId().equals(post.getAuthor().getId())).toList());
+        assertThat(returnedPosts).isEqualTo(existingCoursePosts.stream().filter(post -> student1.getId().equals(post.getAuthor().getId())).toList());
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetUnresolvedPostsPostsForCourse_AnnouncementsFilteredOut() throws Exception {
+    void testGetUnresolvedPostsPostsForCourse_AnnouncementsFilteredOut() throws Exception {
         // filterToUnresolved set true; will filter out announcements as they are resolved by default
         var params = new LinkedMultiValueMap<String, String>();
         params.add("filterToUnresolved", "true");
@@ -588,7 +660,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         database.assertSensitiveInformationHidden(returnedPosts);
         // get posts of current user without announcements and compare
-        List<Post> postsWithoutAnnouncements = existingPosts.stream()
+        List<Post> postsWithoutAnnouncements = existingCoursePosts.stream()
                 .filter(post -> (post.getCourseWideContext() == null || !post.getCourseWideContext().equals(CourseWideContext.ANNOUNCEMENT))).toList();
 
         assertThat(returnedPosts).isEqualTo(postsWithoutAnnouncements);
@@ -596,7 +668,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostsForCourse_WithPostId() throws Exception {
+    void testGetPostsForCourse_WithPostId() throws Exception {
 
         var params = new LinkedMultiValueMap<String, String>();
         params.add("searchText", "#1");
@@ -604,13 +676,13 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         database.assertSensitiveInformationHidden(returnedPosts);
-        assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> post.getId() == 1).collect(Collectors.toList()));
+        assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> post.getId() == 1).toList());
     }
 
     @ParameterizedTest(name = "{displayName} [{index}] {argumentsWithNames}")
     @ValueSource(strings = { "Title Post 1", "Content Post 1", "Tag 1" })
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostsForCourse_SearchByTitleOrContentOrTag(String searchText) throws Exception {
+    void testGetPostsForCourse_SearchByTitleOrContentOrTag(String searchText) throws Exception {
         var params = new LinkedMultiValueMap<String, String>();
         params.add("searchText", searchText);
         params.add("pagingEnabled", "true"); // search by text
@@ -622,7 +694,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostsForCourse_OrderByCreationDateDESC() throws Exception {
+    void testGetPostsForCourse_OrderByCreationDateDESC() throws Exception {
         // TODO: Disabled until next refactoring due to incompatibility of DISTINCT & ORDER BY in H2 DB during testing
         // TODO: https://github.com/h2database/h2database/issues/408
 
@@ -648,7 +720,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostsForCourse_OrderByCreationDateASC() throws Exception {
+    void testGetPostsForCourse_OrderByCreationDateASC() throws Exception {
         // TODO: Disabled until next refactoring due to incompatibility of DISTINCT & ORDER BY in H2 DB during testing
         // TODO: https://github.com/h2database/h2database/issues/408
 
@@ -674,7 +746,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetPostsPageForCourse() throws Exception {
+    void testGetPostsPageForCourse() throws Exception {
         // pagingEnabled set; will fetch a page of course posts
         var params = new LinkedMultiValueMap<String, String>();
 
@@ -692,7 +764,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testDeletePosts_asStudent() throws Exception {
+    void testDeletePosts_asStudent() throws Exception {
         // delete own post (index 0)--> OK
         Post postToDelete = existingPosts.get(0);
 
@@ -702,7 +774,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testDeletePosts_asStudent_forbidden() throws Exception {
+    void testDeletePosts_asStudent_forbidden() throws Exception {
         // delete post from another student (index 1) --> forbidden
         Post postToNotDelete = existingPosts.get(1);
 
@@ -712,7 +784,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testDeleteAnnouncement_asTutor_forbidden() throws Exception {
+    void testDeleteAnnouncement_asTutor_forbidden() throws Exception {
         Post postToNotDelete = existingCourseWidePosts.get(1);
         // simulate as if it was an announcement
         postToNotDelete.setCourseWideContext(CourseWideContext.ANNOUNCEMENT);
@@ -724,7 +796,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testDeletePosts_asTutor() throws Exception {
+    void testDeletePosts_asTutor() throws Exception {
         Post postToDelete = existingLecturePosts.get(0);
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToDelete.getId(), HttpStatus.OK);
@@ -744,7 +816,7 @@ public class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testDeleteNonExistentPosts_asTutor_notFound() throws Exception {
+    void testDeleteNonExistentPosts_asTutor_notFound() throws Exception {
         // try to delete non-existing post
         request.delete("/api/courses/" + courseId + "/posts/" + 9999L, HttpStatus.NOT_FOUND);
     }
